# agent-session-recorder

./: .coderabbit.yaml  .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  build.rs  build.sh  cliff.toml  install.sh  tarpaulin.toml  uninstall.sh
.cargo/: config.toml
.cargo-husky/hooks/: pre-commit  pre-push
.github/workflows/: ci.yml  docs.yml  release.yml  wiki-sync.yml
.state/: INDEX.md  coordinator.md  current-phase.md  decisions.md  plan.md  tui-framework-plan.md
.state-templates/: INDEX.md  coordinator.md  current-phase.md  phase-progress.md
.state/chore-improve-orchestrator-sdlc/: PLAN.md
.state/chore-improve-roles-sdlc/: ADR.md
.state/enhance-shell-minification/: ADR.md  PLAN.md  REQUIREMENTS.md
.state/feature-clipboard-copy/: ADR.md  PLAN.md  REQUIREMENTS.md
.state/feature-play-command/: ADR.md  PLAN.md  REQUIREMENTS.md
.state/feature-two-phase-review-workflow/: ADR.md  PLAN.md  REQUIREMENTS.md
.state/file-explorer-transform/: ADR.md  PLAN.md  REQUIREMENTS.md
.state/fix-player-resize-viewport/: REVIEW.md
.state/fix-player-scroll-region-bug/: ADR.md  PLAN.md  REQUIREMENTS.md
.state/fix-recording-rename-race-condition/: ADR.md  PLAN.md  REQUIREMENTS.md  REVIEW.md
.state/phase-1/: blockers.md  progress.md
.state/refactor-analyze-command/: ADR.md  PLAN.md  REQUIREMENTS.md  SPEC.md
.state/refactor-analyzer-config/: REVIEW.md
.state/refactor-asciicast-module/: ADR.md  PLAN.md  REQUIREMENTS.md
.state/refactor-shell-integration/: ADR.md  PLAN.md  REQUIREMENTS.md
.state/refactor-theme-module/: ADR.md  PLAN.md  REQUIREMENTS.md
.state/refactor-tui-apps/: ADR.md  PLAN.md  REQUIREMENTS.md  REVIEW.md
.state/release-workflow-changelog/: ADR.md  PLAN.md
.state/silence-removal/: ADR.md  PLAN.md  REQUIREMENTS.md
Formula/: asr.rb
agents/: agr-analyze.md  agr-review.md  asr-analyze.md  asr-review.md  settings.json
architecture/: AGENTS.md  SDLC.md
assets/: logo.txt  logo_small.txt  logo_small_done.txt
docker/: Dockerfile  docker-compose.yml
docs/: COMMANDS.md
docs/man/: agr-agents-add.1  agr-agents-is-wrapped.1  agr-agents-list.1  agr-agents-no-wrap.1  agr-agents-remove.1  agr-agents.1  agr-analyze.1  agr-cleanup.1  agr-config-edit.1  agr-config-migrate.1  agr-config-reset.1  agr-config-show.1  agr-config.1  agr-list.1  agr-marker-add.1  agr-marker-list.1  agr-marker.1  agr-optimize.1  agr-play.1  agr-record.1  agr-shell-install.1  agr-shell-status.1  agr-shell-uninstall.1  agr-shell.1  agr-status.1  agr.1
docs/wiki/: Command-agents.md  Command-analyze.md  Command-cleanup.md  Command-config.md  Command-copy.md  Command-list.md  Command-marker.md  Command-optimize.md  Command-play.md  Command-record.md  Command-shell.md  Command-status.md  Command-usage.md  Configuration.md  Home.md
research/: algorithm_for_asciicast_cutting_and_compression.md
scripts/: commit-msg-hook.sh  generate-changelog.sh
shell/: agr.sh  asr.sh  completions.bash  completions.zsh
src/: analyzer.rs  analyzer_legacy.rs  asciicast.rs  branding.rs  cli.rs  config.rs  lib.rs  main.rs  markers.rs  playback.rs  recording.rs  shell.rs  skills.rs  storage.rs  terminal_buffer.rs  utils.rs
src/analyzer/: chunk.rs  config.rs  content.rs  error.rs  extractor.rs  mod.rs  progress.rs  prompt.rs  result.rs  service.rs  tracker.rs  types.rs  worker.rs
src/asciicast/: integrity.rs  marker.rs  mod.rs  reader.rs  silence_removal.rs  transform.rs  transform_ops.rs  types.rs  writer.rs
src/clipboard/: copy.rs  error.rs  mod.rs
src/commands/: agents.rs  analyze.rs  cleanup.rs  completions.rs  config.rs  copy.rs  list.rs  marker.rs  mod.rs  play.rs  record.rs  shell.rs  status.rs  transform.rs
src/config/: analysis.rs  docs.rs  io.rs  migrate.rs  mod.rs  types.rs
src/files/: backup.rs  filename.rs  lock.rs  mod.rs  resolve.rs
src/player/: asciinema.rs  mod.rs  native.rs  state.rs  terminal.rs
src/shell/: completions.rs  install.rs  minify.rs  mod.rs  paths.rs  status.rs
src/terminal/: mod.rs  performer.rs  types.rs
src/theme/: cli.rs  logo.rs  mod.rs  tui.rs
src/tui/: app.rs  cleanup_app.rs  event.rs  list_app.rs  mod.rs  preview_cache.rs  theme.rs  ui.rs
src/utils/: process_guard.rs
tests/: asciicast_test.rs  e2e_test.sh  integration.rs  markers_test.rs  performance.rs  storage_test.rs  unit.rs
tests/e2e/: agents.sh  (+10 more)
xtask/: Cargo.toml
xtask/src/: main.rs
(+250 files in other folders)
