[package]
name = "agr"
version = "0.1.0"
edition = "2021"
description = "Agent Session Recorder - CLI tool for recording AI agent sessions with asciinema"
authors = ["Simon Sanladerer"]
license = "MIT"
repository = "https://github.com/simon/agent-session-recorder"
keywords = ["cli", "asciinema", "recording", "ai", "agent"]
categories = ["command-line-utilities"]

[[bin]]
name = "agr"
path = "src/main.rs"

[lib]
name = "agr"
path = "src/lib.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ctrlc = "3.4"
dirs = "5.0"
humansize = "2.1"
toml = "0.8"
chrono = "0.4"
anyhow = "1.0"
thiserror = "1.0"

[dev-dependencies]
tempfile = "3.10"
assert_cmd = "2.0"
predicates = "3.1"

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = "z"
