[workspace]
members = [".", "xtask"]

[package]
name = "agr"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
description = "Agent Session Recorder - CLI tool for recording AI agent sessions with asciinema"
authors = ["Simon Sanladerer"]
license = "MIT"
repository = "https://github.com/simon/agent-session-recorder"
keywords = ["cli", "asciinema", "recording", "ai", "agent"]
categories = ["command-line-utilities"]

# Allow tarpaulin_include cfg for coverage exclusion
# See: https://github.com/xd009642/tarpaulin#ignoring-code-in-files
[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin_include)'] }

[features]
default = []
release = []  # CI sets this for official builds (clean version without git hash)

[[bin]]
name = "agr"
path = "src/main.rs"

[lib]
name = "agr"
path = "src/lib.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
clap_complete = "4.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ctrlc = "3.4"
deunicode = "1.6"
dirs = "5.0"
humansize = "2.1"
toml = "0.8"
toml_edit = "0.22"
chrono = "0.4"
anyhow = "1.0"
thiserror = "1.0"
atty = "0.2"
unicode-width = "0.2"
terminal_size = "0.4.3"
ratatui = "0.29"
crossterm = "0.28"
vte = "0.15"
tracing = "0.1.44"

[dev-dependencies]
tempfile = "3.10"
assert_cmd = "2.0"
predicates = "3.1"
insta = { version = "1.46.1", features = ["filters"] }
cargo-husky = { version = "1", default-features = false, features = ["user-hooks"] }

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = "z"

[build-dependencies]
vergen-gitcl = { version = "1", features = ["build"] }
