[package]
name = "xtask"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
# CLI parsing for xtask commands
clap = { version = "4.4", features = ["derive"] }
# Man page generation
clap_mangen = "0.2"
# Access to main agr crate for CLI definitions
agr = { path = ".." }
# File operations
anyhow = "1.0"
